...
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.y3lc.yourdiary.TrashFragment"
        android:label="@string/trash_title"
        tools:layout="@layout/fragment_trash" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.y3lc.yourdiary.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>

