...
            app:ensureMinTouchTargetSize="false"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_calendar_mini"
            app:tint="?attr/colorSurface" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/fab_margin"
            android:contentDescription="@string/create_entry"
            android:scaleType="center"
...
